[project]
authors = [
  {name = "yyhhenry", email = "yyhhenry@foxmail.com"},
]
dependencies = [
  "numpy==1.26.2",
  "torch==2.1.2",
]
description = "Default template for PDM package"
license = {text = "MIT"}
name = "pdm-torch-env"
readme = "README.md"
requires-python = "==3.10.*"
version = "0.1.0"

[tool.pdm]
package-type = "application"

[[tool.pdm.source]]
exclude_packages = ["*"]
include_packages = ["torch", "torchvision"]
name = "torch"
url = "https://download.pytorch.org/whl/cu121"
